--- a/MilkyShop.RazorWebApp/appsettings.json
+++ b/MilkyShop.RazorWebApp/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=milkyshop;Username=postgres;Password=Dutchanh123;Pooling=true;MinPoolSize=5;MaxPoolSize=20;Timeout=15;Encoding=UTF8;"
+    "DefaultConnection": "Host=dpg-d2d9uu3e5dus73fonl5g-a.singapore-postgres.render.com;Database=milkyshop;Username=milkyshop_user;Password=gPEhF8Z4lbW4othu3dbDuKh6pGSrJhYW;SSL Mode=Require;Trust Server Certificate=true;"
   },
   "AllowedHosts": "*"
 }
