--- a/Rentify.Services/Rentify.Services.csproj
+++ b/Rentify.Services/Rentify.Services.csproj
@@ -14,4 +14,8 @@
       <Folder Include="ExternalService\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="15.0.1" />
+    </ItemGroup>
+
 </Project>
