Add comment to UI

--- a/Rentify.RazorWebApp/Rentify.RazorWebApp.csproj
+++ b/Rentify.RazorWebApp/Rentify.RazorWebApp.csproj
@@ -49,6 +49,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="ViewModels\" />
       <Folder Include="Pages\UserPages\" />
     </ItemGroup>
 
