feat: integrate cloudinary cloud for upload images

--- a/Rentify.RazorWebApp/appsettings.json
+++ b/Rentify.RazorWebApp/appsettings.json
@@ -5,8 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  
   "ConnectionStrings": {
     "DefaultConnection": "Host=dpg-d2d9uu3e5dus73fonl5g-a.singapore-postgres.render.com;Database=rentify;Username=milkyshop_user;Password=gPEhF8Z4lbW4othu3dbDuKh6pGSrJhYW;SSL Mode=Require;Trust Server Certificate=true;"
+  },
+  
+  "Cloudinary": {
+    "CloudName": "di9xfkskd",
+    "ApiKey": "913453832832571",
+    "ApiSecret": "I8cdeeLipRzO3fgRNmvsheUZPCY"
   },
   "AllowedHosts": "*"
 }
