--- a/Rentify.Services/Rentify.Services.csproj
+++ b/Rentify.Services/Rentify.Services.csproj
@@ -16,6 +16,7 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="15.0.1" />
+      <PackageReference Include="CloudinaryDotNet" Version="1.27.6" />
     </ItemGroup>
 
 </Project>
