--- a/Rentify.RazorWebApp/appsettings.json
+++ b/Rentify.RazorWebApp/appsettings.json
@@ -10,10 +10,11 @@
     "DefaultConnection": "Host=dpg-d2d9uu3e5dus73fonl5g-a.singapore-postgres.render.com;Database=rentify;Username=milkyshop_user;Password=gPEhF8Z4lbW4othu3dbDuKh6pGSrJhYW;SSL Mode=Require;Trust Server Certificate=true;"
   },
   
-  "Cloudinary": {
+  "CloudinarySettings": {
     "CloudName": "di9xfkskd",
     "ApiKey": "913453832832571",
     "ApiSecret": "I8cdeeLipRzO3fgRNmvsheUZPCY"
   },
+  
   "AllowedHosts": "*"
 }
