--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,15 +20,11 @@ env:
   DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
   DOCKER_HUB_TOKEN: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-  VPS_HOST: ${{ secrets.VPS_HOST }}
-  VPS_USER: ${{ secrets.VPS_USER }}
-  VPS_SSH_KEY: ${{ secrets.VPS_SSH_KEY }}
-
   DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
 
 jobs:
   test:
-    name: Build .NET (no tests yet)
+    name: Build .NET
     runs-on: ubuntu-latest
     timeout-minutes: 20
     steps:
@@ -105,9 +101,9 @@ jobs:
       - name: Copy docker-compose.yaml to VPS
         uses: appleboy/scp-action@v0.1.7
         with:
-          host: ${{ env.VPS_HOST }}
-          username: ${{ env.VPS_USER }}
-          key: ${{ env.VPS_SSH_KEY }}
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USER }}
+          key: ${{ secrets.VPS_SSH_KEY }}
           source: "composeout/docker-compose.yaml"
           target: "~/rentify"
           overwrite: true
@@ -116,25 +112,31 @@ jobs:
       - name: Deploy via SSH
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: ${{ env.VPS_HOST }}
-          username: ${{ env.VPS_USER }}
-          key: ${{ env.VPS_SSH_KEY }}
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USER }}
+          key: ${{ secrets.VPS_SSH_KEY }}
+          envs: REGISTRY_NAME,IMAGE_NAME,DOCKER_HUB_USERNAME,DOCKER_HUB_TOKEN
           script: |
             set -e
             mkdir -p ~/rentify
             cd ~/rentify
-            # .env cho docker compose
+
+            # tạo .env cho docker compose (đọc bởi compose)
             echo "REGISTRY_NAME=${REGISTRY_NAME}" > .env
-            # Tạo external network nếu chưa có
+
+            # network external (nếu chưa có)
             docker network inspect mamafit-network >/dev/null 2>&1 || docker network create mamafit-network
-            # Login + pull image mới
+
+            # login + pull image
             echo "${DOCKER_HUB_TOKEN}" | docker login -u "${DOCKER_HUB_USERNAME}" --password-stdin
             docker pull "${IMAGE_NAME}"
-            # Deploy
-            docker compose up -d --pull always --no-deps --force-recreate rentify-web
-            # Kiểm tra container
-            docker ps -a | grep rentify-web || (echo "Container not found!" && exit 1)
 
+            # deploy
+            docker compose up -d --pull always --no-deps --force-recreate rentify-web
+
+            # verify
+            docker ps -a | grep rentify-web || (echo "Container not found!" && exit 1)
+  
   notify-success:
     name: Notify Discord (Success)
     runs-on: ubuntu-latest
