--- a/Rentify.RazorWebApp/appsettings.json
+++ b/Rentify.RazorWebApp/appsettings.json
@@ -8,5 +8,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=dpg-d2d9uu3e5dus73fonl5g-a.singapore-postgres.render.com;Database=rentify;Username=milkyshop_user;Password=gPEhF8Z4lbW4othu3dbDuKh6pGSrJhYW;SSL Mode=Require;Trust Server Certificate=true;"
   },
+  "BaseUrl": "https://api.mamafit.studio",
+  "Timeout": 30,
   "AllowedHosts": "*"
 }
