feat: integration redis for caching

--- a/Rentify.RazorWebApp/appsettings.json
+++ b/Rentify.RazorWebApp/appsettings.json
@@ -5,16 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  
   "ConnectionStrings": {
     "DefaultConnection": "Host=dpg-d2d9uu3e5dus73fonl5g-a.singapore-postgres.render.com;Database=rentify;Username=milkyshop_user;Password=gPEhF8Z4lbW4othu3dbDuKh6pGSrJhYW;SSL Mode=Require;Trust Server Certificate=true;"
   },
-  
+  "RedisSettings": {
+    "ConnectionString": "redis-19420.crce185.ap-seast-1-1.ec2.redns.redis-cloud.com:19420,user=default,password=zHxrRdzZSGcoxBSAGZ45xYd2drns4f07"
+  },
   "CloudinarySettings": {
     "CloudName": "di9xfkskd",
     "ApiKey": "913453832832571",
     "ApiSecret": "I8cdeeLipRzO3fgRNmvsheUZPCY"
   },
-  
   "AllowedHosts": "*"
 }
