--- a/Rentify.Services/Rentify.Services.csproj
+++ b/Rentify.Services/Rentify.Services.csproj
@@ -11,12 +11,9 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="ExternalService\" />
-    </ItemGroup>
-
-    <ItemGroup>
       <PackageReference Include="AutoMapper" Version="15.0.1" />
       <PackageReference Include="CloudinaryDotNet" Version="1.27.6" />
+      <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.15" />
     </ItemGroup>
 
 </Project>
