--- a/Rentify.RazorWebApp/appsettings.json
+++ b/Rentify.RazorWebApp/appsettings.json
@@ -16,5 +16,11 @@
     "ApiKey": "913453832832571",
     "ApiSecret": "I8cdeeLipRzO3fgRNmvsheUZPCY"
   },
-  "AllowedHosts": "*"
+  "EmailSettings": {
+    "ApiKey": "",
+    "ApiBaseUri": "",
+    "Domain": "",
+    "FromEmail": "",
+    "FromName": ""
+  }
 }
