feat: config mailgun for send email service

--- a/Rentify.RazorWebApp/appsettings.json
+++ b/Rentify.RazorWebApp/appsettings.json
@@ -17,10 +17,11 @@
     "ApiSecret": "I8cdeeLipRzO3fgRNmvsheUZPCY"
   },
   "EmailSettings": {
-    "ApiKey": "",
-    "ApiBaseUri": "",
-    "Domain": "",
-    "FromEmail": "",
-    "FromName": ""
-  }
+    "ApiKey": "c6af6cb96992d88bda014b54c39bb9a2-45de04af-0e75718b",
+    "ApiBaseUri": "https://api.mailgun.net",
+    "Domain": "mg.mamafit.studio",
+    "FromEmail": "Rentify System <rentify.system@mg.mamafit.studio>",
+    "FromName": "Rentify"
+  },
+  "AllowedHosts": "*"
 }
