--- a/Rentify.RazorWebApp/appsettings.json
+++ b/Rentify.RazorWebApp/appsettings.json
@@ -18,10 +18,10 @@
   },
   "EmailSettings": {
     "ApiKey": "",
-    "ApiBaseUri": "",
-    "Domain": "",
-    "FromEmail": "",
-    "FromName": ""
+    "ApiBaseUri": "https://api.mailgun.net",
+    "Domain": "mg.mamafit.studio",
+    "FromEmail": "Rentify System <rentify.system@mg.mamafit.studio>",
+    "FromName": "Rentify"
   },
   "AllowedHosts": "*"
 }
